fixed spacing

--- a/src/client/styles/_quotesswiper.scss
+++ b/src/client/styles/_quotesswiper.scss
@@ -2,7 +2,7 @@ quotes-swiper {
   display: block;
   background-color: #333;
   color: #fff;
-  padding: $spacer*2 0;
+  padding: $spacer*3 0;
 
   blockquote {
     text-transform: uppercase;
